2015-02-13  Lars Ingebrigtsen  <larsi@gnus.org>

	* net/shr.el (shr-tag-li): Speed up rendering pages with lots of
	<ul>.

2015-02-12  Oleh Krehel  <ohwoeowho@gmail.com>

	* progmodes/gdb-mi.el (gdb-display-io-nopopup): New defcustom.
	(gdb-inferior-filter): Don't pop up the buried output buffer when
	`gdb-display-io-nopopup' is non-nil.

2015-02-12  Fabián Ezequiel Gallina  <fgallina@gnu.org>

	python.el: Allow killing shell buffer if process is dead.  (Bug#19823)

	* progmodes/python.el (python-shell-font-lock-kill-buffer): Don't
	require a running process.
	(python-shell-font-lock-post-command-hook): Fontify only if the
	shell process is running.

2015-02-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* hi-lock.el (hi-lock-unface-buffer): Don't call
	font-lock-remove-keywords if not needed (bug#19737).

2015-02-11  Artur Malabarba  <bruce.connor.am@gmail.com>

	* emacs-lisp/package.el (package-install): Invert the second
	argument, for better backwards compatibility.
	(package-install-button-action, package-reinstall)
	(package-menu-execute): Account for the change.

2015-02-11  Nicolas Petton <nicolas@petton.fr>

	* emacs-lisp/seq.el (seq-reverse): Add a backward-compatible
	version of seq-reverse that works on sequences in Emacs 24.
	Bump seq.el version to 1.2.

2015-02-11  Artur Malabarba  <bruce.connor.am@gmail.com>

	* emacs-lisp/package.el (package--incompatible-p): New function.
	Return non-nil if PKG has no chance of being installable.
	(package--emacs-version-list): New variable.
	(describe-package-1, package-desc-status)
	(package-menu--print-info, package-menu--status-predicate):
	Account for the "incompat" status.

2015-02-11  Martin Rudalics  <rudalics@gmx.at>

	* frame.el (toggle-frame-maximized, toggle-frame-fullscreen):
	Rename frame parameter `maximized' to `fullscreen-restore'.
	Restore fullwidth/-height after fullboth state.  Update doc-strings.

2015-02-11  Lars Ingebrigtsen  <larsi@gnus.org>
